Add robots meta tag to HTML head
Added robots meta tag for SEO optimization.

--- a/Saját weboldalam.html
+++ b/Saját weboldalam.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <title>WebHatch</title>
 
     <style>
@@ -284,3 +285,4 @@ document.getElementById("reviewForm").addEventListener("submit", function(e){
 
 </body>
 </html>
+
