--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="Dts0y-Yt94u-xgVhtccC23ZCqmgq97TsV620EKH3ur0" />
     <title>WebHatch</title>
 
     <style>
@@ -285,3 +286,4 @@ document.getElementById("reviewForm").addEventListener("submit", function(e){
 
 </body>
 </html>
+
