Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <strong><u>GitHub Pages feltöltés + domain bekötés</u>— 
             <span class="price">30 000 Ft / hó</span></strong>
             <p>
-                <strong>Tartalmazza:</strong> kisebb módosítások, képcserék, szövegjavítások, hibák javítása, frissítések
+                <strong>Tartalmazza:</strong> Weboldal feltöltése GitHub Pages-re, saját domain (pl. www.ceged.hu) technikai bekötése, biztonságos HTTPS tanúsítvány beállítása, webhely működésének ellenőrzése, google számára elérhetővé tétele
             </p>
         </li>
 
@@ -286,4 +286,5 @@ document.getElementById("reviewForm").addEventListener("submit", function(e){
 
 </body>
 </html>
+
 
